# keycap

./: Cargo.toml  README.md  build.rs  flake.nix  keycap_client.nix  keycap_front.nix  keycap_server.nix  start.sh
front/: package.json
front/src/: App.css  App.tsx  NoteElement.tsx  ReNoteElement.tsx
keycap-client/: package.json
keycap-client/src/: App.tsx  LoadableState.tsx
lib/keycap-client/: package.json
lib/keycap-client/src/: NoteElement.tsx
src/: lib.rs  main.rs
www/keycap-client/src/: ReNoteElement.tsx
