[package]
name = "keycap"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.23"
ever = "0.2.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.216"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.25.0", features = ["native-tls"] }
warp = "0.3.7"
